--- a/package.json
+++ b/package.json
@@ -21,5 +21,28 @@
   "bugs": {
     "url": "https://github.com/iwnnay/text-story-game-engine/issues"
   },
-  "homepage": "https://github.com/iwnnay/text-story-game-engine#readme"
+  "homepage": "https://github.com/iwnnay/text-story-game-engine#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3",
+    "file-loader": "^3.0.1",
+    "jest": "^23.6.0",
+    "path": "^0.12.7",
+    "punycode": "^2.1.1",
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
+  }
 }
